<resources>
    <string name="app_name">理财</string>
    <string name="main_bottom_home">首页</string>
    <string name="main_bottom_invest">投资</string>
    <string name="main_bottom_me">我的资产</string>
    <string name="main_bottom_more">更多</string>
    <string name="welcome_text">手机金融</string>
    <string name="welcome_current_version">当前版本:</string>
    <string name="home_principal_and_interest_protection">本息保障</string>
    <string name="home_daily_interest">每日计息</string>
    <string name="home_high_yield">高额收益</string>
    <string name="home_year_rate_key">预期年利率：</string>
    <string name="home_main_button">立即加入</string>
    <string name="home_guarantee">风险保障暂未提供！！！</string>
    <string name="page_loading">努力加载中......</string>
    <string name="page_error">加载数据错误，点击重试!</string>
    <string name="page_empty">抱歉，没有数据了......</string>

    <string name="invest_product_list">全部理财</string>
    <string name="invest_product_recommend">推荐理财</string>
    <string name="invest_product_hot">热门理财</string>
    <string-array name="invest_tab">
        <item>@string/invest_product_list</item>
        <item>@string/invest_product_recommend</item>
        <item>@string/invest_product_hot</item>
    </string-array>
    <string name="marquee_text">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;广告位招租！！！&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
</resources>