<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="0dp"
    android:layout_height="55dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    tools:layout_width="match_parent">

    <View
        android:id="@+id/v_bottom_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/main_bottom_line"
        app:layout_constraintBottom_toTopOf="@id/iv_main_home"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_main_home"
        android:layout_width="30dp"
        android:layout_height="0dp"
        android:layout_marginTop="3dp"
        android:contentDescription="@string/main_bottom_home"
        android:src="@drawable/bottom01"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/iv_main_invest"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/v_bottom_line" />

    <ImageView
        android:id="@+id/iv_main_invest"
        android:layout_width="30dp"
        android:layout_height="0dp"
        android:contentDescription="@string/main_bottom_invest"
        android:src="@drawable/bottom03"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/iv_main_me"
        app:layout_constraintStart_toEndOf="@id/iv_main_home"
        app:layout_constraintTop_toTopOf="@id/iv_main_home" />

    <ImageView
        android:id="@+id/iv_main_me"
        android:layout_width="30dp"
        android:layout_height="0dp"
        android:contentDescription="@string/main_bottom_me"
        android:src="@drawable/bottom05"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/iv_main_more"
        app:layout_constraintStart_toEndOf="@id/iv_main_invest"
        app:layout_constraintTop_toTopOf="@id/iv_main_home" />

    <ImageView
        android:id="@+id/iv_main_more"
        android:layout_width="30dp"
        android:layout_height="0dp"
        android:contentDescription="@string/main_bottom_more"
        android:src="@drawable/bottom07"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_main_me"
        app:layout_constraintTop_toTopOf="@id/iv_main_home" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_bottom_home"
        android:textSize="@dimen/main_bottom_text_size"
        app:layout_constraintEnd_toEndOf="@id/iv_main_home"
        app:layout_constraintStart_toStartOf="@id/iv_main_home"
        app:layout_constraintTop_toBottomOf="@id/iv_main_home" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_bottom_invest"
        android:textSize="@dimen/main_bottom_text_size"
        app:layout_constraintEnd_toEndOf="@id/iv_main_invest"
        app:layout_constraintStart_toStartOf="@id/iv_main_invest"
        app:layout_constraintTop_toBottomOf="@id/iv_main_invest" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_bottom_me"
        android:textSize="@dimen/main_bottom_text_size"
        app:layout_constraintEnd_toEndOf="@id/iv_main_me"
        app:layout_constraintStart_toStartOf="@id/iv_main_me"
        app:layout_constraintTop_toBottomOf="@id/iv_main_me" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_bottom_more"
        android:textSize="@dimen/main_bottom_text_size"
        app:layout_constraintEnd_toEndOf="@id/iv_main_more"
        app:layout_constraintStart_toStartOf="@id/iv_main_more"
        app:layout_constraintTop_toBottomOf="@id/iv_main_more" />

</androidx.constraintlayout.widget.ConstraintLayout>