<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/include_title"
        layout="@layout/common_title" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/include_title">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/vp_home"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                app:layout_constraintBottom_toBottomOf="@id/vp_home"
                app:layout_constraintEnd_toEndOf="@id/vp_home"
                app:layout_constraintStart_toStartOf="@id/vp_home"
                tools:text="我是小圆圈" />

            <TextView
                android:id="@+id/tv_product_common"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:drawablePadding="5dp"
                android:textColor="@color/product_detail_common"
                android:textSize="30sp"
                app:drawableEndCompat="@drawable/recommend"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/vp_home"
                tools:text="理财产品366" />

            <TextView
                android:id="@+id/tv_protection"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/home_attribute_bg"
                android:gravity="center"
                android:padding="3dp"
                android:text="@string/home_principal_and_interest_protection"
                android:textColor="@color/product_detail_common"
                app:layout_constraintBottom_toBottomOf="@id/tv_daily_interest"
                app:layout_constraintEnd_toStartOf="@id/tv_daily_interest"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_daily_interest" />

            <TextView
                android:id="@+id/tv_daily_interest"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/home_attribute_bg"
                android:gravity="center"
                android:padding="3dp"
                android:text="@string/home_daily_interest"
                android:textColor="@color/product_detail_common"
                app:layout_constraintEnd_toStartOf="@id/tv_high_yield"
                app:layout_constraintStart_toEndOf="@id/tv_protection"
                app:layout_constraintTop_toBottomOf="@id/tv_product_common" />

            <TextView
                android:id="@+id/tv_high_yield"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="40dp"
                android:background="@drawable/home_attribute_bg"
                android:gravity="center"
                android:padding="3dp"
                android:text="@string/home_high_yield"
                android:textColor="@color/product_detail_common"
                app:layout_constraintBottom_toBottomOf="@id/tv_daily_interest"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_daily_interest"
                app:layout_constraintTop_toTopOf="@id/tv_daily_interest" />

            <View
                android:id="@+id/v_"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/holo_red_light"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_daily_interest" />


            <TextView
                android:id="@+id/tv_home_year_rate_key"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_year_rate_key"
                android:textColor="@color/product_detail_common"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@id/tv_home_year_rate"
                app:layout_constraintEnd_toStartOf="@id/tv_home_year_rate"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_home_year_rate" />

            <TextView
                android:id="@+id/tv_home_year_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/product_detail_common"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_home_year_rate_key"
                app:layout_constraintTop_toBottomOf="@id/v_"
                tools:text="10％ + 2％" />

            <Button
                android:id="@+id/btn_main"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/home"
                android:text="@string/home_main_button"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_home_year_rate" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawablePadding="5dp"
                android:text="@string/home_guarantee"
                android:textColor="@color/product_detail_common"
                android:textSize="18sp"
                app:drawableStartCompat="@drawable/guarantee_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_main" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>